style: fix bug (cause by affected scope), change width, z-index

--- a/src/css/common/combobox.css
+++ b/src/css/common/combobox.css
@@ -9,7 +9,7 @@
   border-radius: 4px;
   
   height: 40px;
-  width: fit-content;
+  /* width: fit-content; */
 }
 
   .m-combobox:focus-within {
@@ -61,7 +61,7 @@
   list-style: none;
   position: absolute;
   top: calc(100% + 2px);
-  z-index: 1;
+  z-index: 3;
   /* display: inline-block; */
   display: none;
   background-color: #ffffff;
