--- a/src/css/common/input.css
+++ b/src/css/common/input.css
@@ -24,19 +24,6 @@ input {
     border-color: #019160;
   }
 
-  input + i {
-    position: absolute;
-    color: black;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    font-size: 16px;
-  }
-
-.input-search {
-  width: 300px;
-  padding-left: 40px; 
-}
 
 select {
   padding: 10px 0px 10px 16px;
@@ -59,28 +46,36 @@ input.border-red {
   background-color: #ffffff;
   border-radius: 4px;
   width: 100%;
+  user-select: none;
 }
 
-.input-wrapper .btn-clear-text {
+.btn-clear-text {
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  right: 5px;
   border-radius: 50%;
+  right: 0px;
   box-sizing: border-box;
   width: 16px;
   height: 16px;
-  line-height: 16px;
-  padding: 2px;
-  background-color: #e9ebee;
+
   cursor: pointer;
-  /* display: none; */
+  
+  background-color: #e9ebee;
+  background-image: url(../../assets/icon/x.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 12px;
 }  
 
-.input-wrapper .btn-clear-text > img{
+.input-wrapper .btn-clear-text {
+  right: 5px;
+}
+
+/* .input-wrapper .btn-clear-text > img{
   width: 100%;
   opacity: 0.7;
-} 
+}  */
 
 /* Thông báo khi validate false */
 .notice {
