--- a/src/css/common/pop-up.css
+++ b/src/css/common/pop-up.css
@@ -6,7 +6,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 4;
+  z-index: 5;
 }
 .popup {
   position: absolute;
