--- a/src/css/common/selectbox.css
+++ b/src/css/common/selectbox.css
@@ -38,7 +38,7 @@
   list-style: none;
   position: absolute;
   top: calc(100% + 2px);
-  z-index: 1;
+  z-index: 3;
   /* display: inline-block; */
   display: none;
   background-color: #ffffff;
