--- a/src/css/common/toast-messenger.css
+++ b/src/css/common/toast-messenger.css
@@ -3,7 +3,7 @@
   top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 5;
+  z-index: 6;
   /* overflow: hidden; */
   /* transition: 2.5s ease; */
 }
