--- a/src/css/page/form-employee.css
+++ b/src/css/page/form-employee.css
@@ -7,7 +7,7 @@
   overflow: auto;
   padding: 10px 0px;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 3;
+  z-index: 4;
 }
 .form-modal {
   background-color: #ffffff;
@@ -41,13 +41,17 @@
   border-top-right-radius: 4px;
   border-bottom-left-radius: 4px;
   user-select: none;
+  background-image: url(../../assets/icon/x.svg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.form-modal .form-icon-close > img {
-    opacity: 0.6;
-  }
-  .form-modal .form-icon-close:hover {
-    background-color: #dadce0;
-  }
+.form-modal .form-icon-close:focus {
+  background-color: #dadce0;
+  outline: none;
+}
+.form-modal .form-icon-close:hover {
+  background-color: #dadce0;
+}
 
   .form-modal .form-title {
   /* background-color: green; */
@@ -136,12 +140,18 @@
     display: flex;
     gap: 10px;
     justify-content: space-between;
+    /* test */
+    align-items: flex-end;
   }
 
 .content-part .row .form-item {
   width: 50%;
   position: relative;
 }
+
+  .row .form-item .m-combobox {
+    width: 100%;
+  }
 
   .row .form-item input {
     font-family: inherit;
